--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -47,4 +47,4 @@
 \newacronym{OTAA}{OTAA}{Over-The-Air Activation}
 \newacronym{EUI}{EUI}{Extended Unique Identifier}
 \newacronym{NVS}{NVS}{Non-Volatile Storage}
-
+\newacronym{AES}{AES}{Advanced Encryption Standard}
