--- a/report/main.tex
+++ b/report/main.tex
@@ -22,14 +22,12 @@
 \addcontentsline{toc}{section}{List of Listings}
 \lstlistoflistings
 
-\listoftodos
-
 \include{files/Glossary}
 
 
 \mainmatter
 \pagestyle{fancy}
-\lhead[]{\href{https://github.com/Estelamb/Sensor_Networks}{\textbf{Plant Monitoring System}}}
+\lhead[]{\href{https://github.com/Estelamb/Sensor_Networks}{\textbf{Plant Monitoring System with LoRaWAN}}}
 \rhead[]{\textbf{SN-MIoT}}
 \cfoot{\thepage}
 
